--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         }}
       >
       </div>
-      <script data-cmp-src="//cdn-4.convertexperiments.com/v1/js/10017290-10018256.js?environment=production"
+      <script 
+        async
+        data-cmp-src="//cdn-4.convertexperiments.com/v1/js/10017290-10018256.js?environment=production"
         type="text/plain"
         class="cmplazyload"
         data-cmp-vendor="c81288">
