--- a/index.html
+++ b/index.html
@@ -30,5 +30,12 @@
         class="cmplazyload"
         data-cmp-vendor="c81288">
       </script>
+    <script
+        async
+        data-cmp-src="//cmp-test-script.js"
+        class="cmplazyload"
+        type="text/plain"
+        data-cmp-vendor="c81288">
+    </script>
 </body>
 </html>
