--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Testing environment</title>
     <meta charset="UTF-8">
+<script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/6cba98b99249a.js" data-cmp-host="d.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="0"></script>
 </head>
 <body>
 <!--
